build/testing/arbimon/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: arbimon
  namespace: testing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: arbimon
  template:
    metadata:
      labels:
        app: arbimon
    spec:
      serviceAccountName: batch-jobs-service-account
      containers:
        - name: arbimon
          image: 887044485231.dkr.ecr.eu-west-1.amazonaws.com/arbimon:latest
          imagePullPolicy: Always
          resources:
            requests:
              memory: '512Mi'
              cpu: '0.25'
